Attempt to fix the line wrap thing?

--- a/html/base.css
+++ b/html/base.css
@@ -17,7 +17,11 @@
 
 
 html {height:100%;}
-body {background:#E7E8E4; font-family:verdana,helvetica,arial,sans-serif; margin:0; height:100%;}
+body {background:#E7E8E4; font-family:verdana,helvetica,arial,sans-serif; margin:0; height:100%;
+    display:inline-block;
+    word-wrap:break-word;
+    overflow:hidden;
+}
 
 #Occam {
 background-color: #ffffff;
